--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "gulp-svg-sprite": "^1.5.0",
     "jquery": "^3.5.1",
     "jquery-smooth-scroll": "^2.2.0",
     "lottie-web": "^5.7.3",
